# contextual-hvac-rag

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: eval_pipeline_agent_prompt.md  eval_pipeline_blueprint.md  voice_pipeline_agent_prompt.md  voice_pipeline_blueprint.md  whatsapp_test_number_setup.md
docs/agent/: AGENT_CONTEXT.md  DECISIONS.md  NEXT_STEPS.md  WORKLOG.md
eval/: README.md  golden.csv  sample_eval.jsonl
src/contextual_hvac_rag/: __init__.py  cli.py  config.py  contextual_client.py  logging_config.py
src/contextual_hvac_rag/bot_whatsapp/: __init__.py  app.py  audio_convert.py  cache.py  cloud_api.py  event_log.py  formatter.py  guards.py  media.py  store.py  stt.py  tts.py  webhook.py
src/contextual_hvac_rag/eval/: __init__.py  latency.py  loader.py  metrics.py  normalize.py  run.py  writers.py
src/contextual_hvac_rag/ingest/: ingest_pdfs.py  unzip_dataset.py
src/contextual_hvac_rag/metadata/: __init__.py  extractor.py  flatten.py
tests/: test_bot_cache.py  test_config.py  test_eval_loader.py  test_eval_metrics.py  test_eval_normalize.py  test_eval_run.py  test_guards.py  test_metadata_extractor.py  test_metadata_flatten.py  test_tts.py  test_webhook.py  test_whatsapp_formatter.py
