[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextual-hvac-rag"
version = "0.1.0"
description = "Contextual AI RAG toolkit for HVAC and technical PDF ingestion plus WhatsApp webhook integration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Balaji Boopal" }
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "pymupdf>=1.24,<2.0",
  "python-dotenv>=1.0,<2.0",
  "python-multipart>=0.0.9,<1.0",
  "typer>=0.12,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.6,<1.0",
]
voice = [
  "faster-whisper>=1.1,<2.0",
  "google-cloud-translate>=3.15,<4.0",
  "google-cloud-texttospeech>=2.25,<3.0",
  "soundfile>=0.12,<1.0",
  "transformers>=4.46,<5.0",
]

[project.scripts]
contextual-hvac-rag = "contextual_hvac_rag.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
mypy_path = "src"
ignore_missing_imports = true
disallow_any_generics = false
